--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -33,8 +33,8 @@
           </div>
 
           <div class="member">
-            <!--  student 01 -->
-
+            <p><img class="member-pic" src="img/Salamander.PNG"></p>
+            <p>Tyler Crocker - That guy</p>
           </div>
 
           <div class="member">
