--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -58,8 +58,8 @@
           </div>
 
           <div class="member">
-            <!--  student 06 -->
-
+            <p><img class="member-pic" src="img/Tyler-angy.png"></p>
+            <p>Adam Sagin</p>
           </div>
 
           <div class="member">
