--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -58,7 +58,8 @@
           </div>
 
           <div class="member">
-            <!--  student 06 -->
+            <p><img src="img/monkey.png"></p>
+            <p>zaedyn</p>>
 
           </div>
 
