--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="member">
-            <p><img src="img/monkey.png"></p>
+            <!--<img src="img/monkey.png">-->
             <p>zaedyn</p>>
 
           </div>
