--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -38,7 +38,8 @@
           </div>
 
           <div class="member">
-            <!--  student 02 -->
+            <p><img class="member-pic" src="img/Alex_001.png"></p>
+            <p>Taha Rizwan</p>
 
           </div>
 
