--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -38,7 +38,7 @@
           </div>
 
           <div class="member">
-            <p><img class="member-pic" src="img/Alex_001.png"></p>
+            <p><img class="member-pic" src="img/guido.png"></p>
             <p>Taha Rizwan</p>
 
           </div>
