adjusting image size

--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="member">
-            <p><img class="member-pic" src="img/Tyler-angy.png"></p>
+            <p><img class="member-pic" src="img/Tyler-angy.png" width="150px"></p>
             <p>Adam Sagin</p>
           </div>
 
