--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="member">
-            <!--<img src="img/monkey.png">-->
+            <p><img src="img/monkey.png"></p>
             <p>zaedyn</p>>
 
           </div>
