--- a/lesson_06/team.html
+++ b/lesson_06/team.html
@@ -61,7 +61,7 @@
 
           <div class="member">
             <p><img src="img/monkey.png"></p>
-            <p>zaedyn</p>>
+            <p>zaedyn</p>
 
           </div>
 
