--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -50,6 +50,8 @@
             $("#i_summary").attr("src","oak_summary.html");
         })
         $("#beech").click(function(){
+            $("#i_content").attr("src","beach_content.html");
+            $("#i_summary").attr("src","beach_summary.html");
 
 
         })
