--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -24,6 +24,7 @@
             <h3>Index</h3>
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
+            <p><button id="apple">Apple</button></p>
 
         </div>
         <div class="content">
@@ -52,12 +53,11 @@
         $("#beech").click(function(){
             $("#i_content").attr("src","beech_content.html");
             $("#i_summary").attr("src","beech_summary.html");
-<<<<<<< HEAD
-=======
-
->>>>>>> 3264d3349fb6e7658045af4587a05204e0e9c0b1
         })
-
+        $("#apple").click(function(){
+            $("#i_content").attr("src","apple_content.html");
+            $("#i_summary").attr("src","apple_summary.html");
+        })
         /* This will not be merged !  */
 
 
