--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -24,6 +24,7 @@
             <h3>Index</h3>
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
+            <p><button id="mahogany">mahogany</button></p>
 
         </div>
         <div class="content">
@@ -52,6 +53,10 @@
         $("#beech").click(function(){
             $("#i_content").attr("src","beach_content.html");
             $("#i_summary").attr("src","beach_summary.html");
+        })
+        $("#mahogany").click(function(){
+            $("#i_content").attr("src","mahogany_content.html");
+            $("#i_summary").attr("src","mahogany_summary.html");
         })
 
         /* This will not be merged !  */
