--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -25,7 +25,7 @@
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
             <p><button id="apple">Apple</button></p>
-
+            <p><button id="tyler">Tyler</button></p>
         </div>
         <div class="content">
             <iframe id="i_content" src="oak_content.html"
@@ -57,6 +57,10 @@
         $("#apple").click(function(){
             $("#i_content").attr("src","apple_content.html");
             $("#i_summary").attr("src","apple_summary.html");
+        })
+        $("#tyler").click(function(){
+            $("#i_content").attr("src","tyler_content.html");
+            $("#i_summary").attr("src","tyler_summary.html");
         })
         /* This will not be merged !  */
 
