--- a/lesson_08/chocolate.html
+++ b/lesson_08/chocolate.html
@@ -9,13 +9,13 @@
 <body>
     
     <!-- I think there is something wrong in this part -->
-    <div clas="container">
+    <div class="container">
         <h1 class="title">Chocolate</h1>
-        <diiv class="description">>>
-            Our chocolate ice cream is really good, made with real cacao !
+        <div class="description">
+            <p>Our chocolate ice cream is really good, made with real cacao !
     <!-- --------------------------------------------- -->
     
-            Here are some of the countries where cacao is harvested:
+            Here are some of the countries where cacao is harvested: </p>
 
             <ul>
                 <li>French Guiana</li>
